# ltk-tex-utils

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix  release-plz.toml
.github/workflows/: release-plz.yml  release.yml
crates/ltk-tex-handler-shared/: Cargo.toml
crates/ltk-tex-handler-shared/src/: lib.rs
crates/ltk-tex-thumb-handler/: Cargo.toml  ltk_tex.propdesc
crates/ltk-tex-thumb-handler/src/: class_factory.rs  debug.rs  explorer_command.rs  image_processing.rs  lib.rs  preview_handler.rs  property_handler.rs  raster.rs  registration.rs  thumbnail_provider.rs  utils.rs
crates/ltk-tex-utils/: CHANGELOG.md  Cargo.toml  build.rs
crates/ltk-tex-utils/src/: auto_mode.rs  batch.rs  cli.rs  handler.rs  logging.rs  main.rs  shell.rs  utils.rs
crates/ltk-tex-utils/src/commands/: decode.rs  encode.rs  info.rs  mod.rs
crates/ltk-tex-utils/src/shell/: manifest.rs  mod.rs  modern.rs
scripts/: dev-shell-install.ps1  install-context-menu.ps1  install-thumbnail-handler.ps1  install-windows.ps1
src/: main.rs  utils.rs
src/commands/: decode.rs  encode.rs  info.rs  mod.rs
